<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/titulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingTop="20dip">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_url_moodle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/et_moodle_config_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_namespace"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/et_moodle_config_namespace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_wsdl_url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/texto" />

        <EditText
            android:id="@+id/et_moodle_config_wsdl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/btn_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_modificar" />

    </LinearLayout>

</LinearLayout>