<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/texto"/>

        <EditText
            android:id="@+id/et_registrarAlumno_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_rut"
            android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/texto"/>

        <EditText
            android:id="@+id/et_registrarAlumno_rut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>

    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dip">

        <Button
            android:id="@+id/btn_registrarAlumno_inscribirAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_inscribir_alumno" />

        <Button
            android:id="@+id/btn_registrarAlumno_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_volver" />

    </LinearLayout>

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />

</LinearLayout>